--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,11 +13,12 @@
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
-      android:icon="@mipmap/logo"
-      android:roundIcon="@mipmap/logo"
+      android:icon="@mipmap/ic"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
-      android:windowSoftInputMode="adjustResize">
+      android:windowSoftInputMode="adjustResize"
+      android:roundIcon="@mipmap/round"
+      >
       <!-- <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
             android:exported="true"
